--- a/Loading_Models_and_Inference_with_Hugging_Face_Inferences.ipynb
+++ b/Loading_Models_and_Inference_with_Hugging_Face_Inferences.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMn0creptAKbyFH+bNB0kBi",
+      "authorship_tag": "ABX9TyN38EhkgFggZ47IkSDa1t5M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1760,12 +1760,95 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "with torch.no_grad():\n",
+        "    outputs = model(**inputs)\n",
+        "#model(input_ids=inputs['input_ids'], attention_mask=inputs['attention_mask'])"
+      ],
       "metadata": {
         "id": "lGiWdmyMy2yW"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Get the logits\n",
+        "logistic = outputs.logits\n",
+        "print(logistic)\n",
+        "logistic.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "32K_PZR-07cZ",
+        "outputId": "e2fdd55a-d0bb-4e69-848f-555bd93e233f"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-4.3648,  4.7197]])\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "# Post-process the output"
+      ],
+      "metadata": {
+        "id": "LqPXP1eQ1475"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#convert logits to probabilities\n",
+        "probs = torch.softmax(logistic, dim=-1)\n",
+        "\n",
+        "#get the predicted class\n",
+        "predicted_class = torch.argmax(probs, dim=-1)\n",
+        "\n",
+        "#map the predicted class to the label\n",
+        "label = [\"NEGATIVE\", \"POSITIVE\"]\n",
+        "predicted_label = label[predicted_class]\n",
+        "\n",
+        "print(f\"Predicted label:{predicted_label}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oztGC80d1Sa4",
+        "outputId": "7d10a236-79fc-4667-8f9c-e7b3728438f2"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted label:POSITIVE\n"
+          ]
+        }
+      ]
     }
   ]
 }
